# spoken-ner

./: README.md  pyproject.toml  requirements.txt
src/: run.py
src/models/: Wav2Vec.py
src/services/: corpus.py  data_loader.py  logger.py  metrics.py  tools.py
vocab/: en_vocab_with_tags.json
