[tool.poetry]
name = "spoken-ner"
version = "0.1.0"
description = ""
authors = ["Moncef Benaicha <moncef.benaicha@rwth-aachen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.38.0"
numpy = "^1.26.4"
torch = "^2.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
evaluate = "^0.4.1"
seqscore = {git = "https://github.com/MoncefBenaicha/seqscore.git"}
better-exceptions = "^0.3.3"
torchaudio = "^2.2.0"
jiwer = "^3.0.3"
pyctcdecode = "^0.5.0"
kenlm = {url = "https://github.com/kpu/kenlm/archive/master.zip"}
accelerate = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
